--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -166,7 +166,7 @@
 
 	<template id="card-catalog"> <!---->
 		<button class="gallery__item card">
-			<span class="card__category card__category_soft">софт-скил</span>
+			<span class="card__category">софт-скил</span>
 			<h2 class="card__title">+1 час в сутках</h2>
 			<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
 			<span class="card__price">750 синапсов</span>
@@ -177,7 +177,7 @@
 		<div class="card card_full">
 			<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
 			<div class="card__column">
-				<span class="card__category card__category_other">другое</span>
+				<span class="card__category">другое</span>
 				<h2 class="card__title">Бэкенд-антистресс</h2>
 				<p class="card__text">Если планируете решать задачи в тренажёре, берите два.</p>
 				<div class="card__row">
@@ -220,7 +220,7 @@
 				</div>
 				<label class="order__field">
 					<span class="form__label modal__title">Адрес доставки</span>
-					<input name="address" class="form__input" type="text" placeholder="Введите адрес" />
+					<input name="address" class="form__input" pattern="^[0-9a-zA-Zа-яёА-ЯЁ\,\.\-]+([\s][a-zA-Zа-яёА-ЯЁ\,\.\-]+)*" minlength="10" data-error-message="Введите корректный адрес" type="text" placeholder="Введите адрес" />
 				</label>
 			</div>
 			<div class="modal__actions">
@@ -235,11 +235,11 @@
 			<div class="order">
 				<label class="order__field">
 					<span class="form__label modal__title">Email</span>
-					<input name="email" class="form__input" type="text" placeholder="Введите Email" />
+					<input name="email" class="form__input" type="email" required placeholder="Введите Email" />
 				</label>
 				<label class="order__field">
 					<span class="form__label modal__title">Телефон</span>
-					<input name="phone" class="form__input" type="text" placeholder="+7 (" />
+					<input name="phone" class="form__input" pattern="[\+]{0,1}[0-9]{11}" data-error-message="Введите номер телефона" type="tel" placeholder="+7 (" />
 				</label>
 			</div>
 			<div class="modal__actions">
